==================== 2.16.2 ====================
2007-03-12  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.18.0

2007-02-23  Christian Persch  <chpe@svn.gnome.org>

	* src/Yelper.cpp:
	* src/Yelper.h:
	Fix for mozilla API change on trunk.

2006-12-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* m4/gecko.m4:
	* src/Makefile.am:
	* src/Yelper.cpp:
	Fix for mozilla API change on trunk.

==================== 2.16.2 ====================
2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.16.2

2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c:
	When info:dir contains a link to a subdir,
	but not an info name, work as expected
	 (Really fixes bug #371680)
	
	* src/yelp-io-channel.c: 
	Check the file exists and is valid before trying
	to read it (fixes bug #371680)
	
	* src/yelp-gecko-services.cpp: 
	Fix printing ranges (bug #370618, Christian Persch)
	
	* src/yelp-info-parser.c: 
	When whitespace on new line of a note is < 2,
	don't crash (bug #376861)
	Fix crash on libc info page (bug #367410, Matthias Clasen)
	
2006-11-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-main.c:
	Don't crash when saving session (bug #364790)
	
	* src/yelp-search-pager.c: 
	Replace ':' chars in search strings with ' '
	Stops from crashing (bug #364768)
	Don't chew memory when search string contains
	2 consecutive spaces

2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c:
	Fix double free in stupid link types only used by gdb
	info page (apparently).  Bug #364850
	
	* src/yelp-search-pager.c: 
	Don't crash when searching for empty term.  Bug #363949
	
2006-10-07  Elijah Newren  <newren gmail com>

	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
	markup from translatable messages.  #360450

2006-10-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Don't crash when manpath (prog) || MANPATH (env.)
	is available
	